--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@sherby/eleventy-plugin-files-minifier": "^1.1.1",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "eleventy-plugin-code-style-hooks": "^2.0.2",
     "express": "^4.21.2",
