--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sherby/eleventy-plugin-files-minifier": "^1.1.1",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "eleventy-plugin-code-style-hooks": "^2.0.2",
     "express": "^4.21.2",
     "lightningcss-cli": "^1.18.0",
