--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -32,14 +32,12 @@ jobs:
       run: npm run build
       
     - name: FTP Deploy
-      uses: SamKirkland/FTP-Deploy-Action@4.3.3
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: /public/  # Katalog z plikami po buildzie
         server-dir: /bluetaxi_static/  # Dostosuj do struktury Twojego hostingu
-        exclude: |
-          **/.git*
-          **/.git*/**
-          **/node_modules/**
+        passive: true
+      
