--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -30,7 +30,7 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: /public/  # Katalog z plikami po buildzie
+          local-dir: public/  # Katalog z plikami po buildzie
           server-dir: /bluetaxi_static/  # Dostosuj do struktury Twojego hostingu
           passive: true
       
